tests/specs/ecosystem/olets/tailwindcss_fluid_font_size/1_2_0.test
olets/tailwindcss-fluid-font-size/1.2.0
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
TS2304 [ERROR]: Cannot find name 'PluginWithOptions'.
 */ const fluidFontSize: PluginWithOptions = {} as never;
                         ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/src/index.ts:11:26

error: Type checking failed.

